<resources>
    <string name="app_name">rumahjurnal</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="email">Masukkan Email</string>
    <string name="pass">Masukkan Password</string>
    <string name="confirm_pass">Konfirmasi Password</string>
    <string name="nama">Masukkan Nama</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create">Buat Data Jurnal Baru</string>
    <string name="judul_jurnal">Judul Jurnal</string>
    <string name="nama_jurnal">Nama Jurnal</string>
    <string name="volume">Volume</string>
    <string name="issn">ISSN</string>
    <string name="doi">DOI</string>
    <string name="tahun">Tahun</string>
    <string name="penulis">Penulis</string>
    <string name="kategori">Kategori</string>
    <string name="user">Id User</string>
    <string name="upload_jurnal">Klik untuk memasukkan PDF Jurnal</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="edit">Edit Data Jurnal</string>
    <string name="view">View Data Jurnal</string>
    <string-array name="tahun">
        <item>Pilih Tahun Terbit</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="kategori">
        <item>Pilih Kategori</item>
        <item>Teknologi</item>
        <item>Sosial</item>
        <item>Kesehatan</item>
    </string-array>
    <string name="welcome">Selamat Datang</string>
    <string name="nama_app">Rumah Jurnal</string>
    <string name="desc_app">Aplikasi Kumpulan Jurnal</string>
    <string name="baru">Pengguna Baru?</string>
    <string name="signup">Sign Up</string>
    <string name="menu1">Daftar Jurnal Umum</string>
    <string name="menu2">Daftar Jurnal Anda</string>
    <string name="menu3">Edit Profil</string>
    <string name="menu4">Tentang Kami</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="buat">Buat Akun Baru</string>
    <string name="daftar_text">Sudah Menjadi Pengguna?</string>
    <string name="logIn">Log In</string>
    <string name="edit_pop">Edit Data</string>
    <string name="hapus">Hapus Data</string>
    <string name="sukses">Action Sukses</string>
    <string name="isi_alert">Data Jurnal Berhasil Disimpan</string>
    <string name="sukses_regist">Registrasi Sukses</string>
    <string name="isi_alert_regitrasi">Silahkan login menggunakan akun anda</string>
    <string name="sukses_edit">Edit User Sukses</string>
    <string name="isi_alert_edit">Data Anda berhasil tersimpan</string>
    <string name="syarat">Dengan melakukan regitrasi, anda berarti sudah menyetujui Syarat dan Ketentuan dari aplikasi ini</string>
    <string name="logout">Logout</string>
    <string name="isi_alert_logout">Anda yakin ingin logout?</string>
    <string name="dashboard">"Yuk cari refrensi belajar di aplikasi Rumah Jurnal, disini kamu bisa mencari jurnal untuk keperluan belajar atau buat tugas"</string>
</resources>