<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_image"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/edit_pop"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginLeft="40dp"
        android:textSize="28dp"
        android:textColor="@color/black"/>


    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/frame"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/nama"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/frame"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/email"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/frame"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/pass"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/edt_confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/frame"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/confirm_pass"
        android:paddingLeft="20dp"/>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="350dp"
        android:height="64dp"
        android:backgroundTint="@color/ungu"
        android:text="@string/simpan"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp"/>

</LinearLayout>