<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_image"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/welcome"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginLeft="40dp"
        android:textSize="28dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/frame"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/email"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/frame"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/pass"
        android:padding="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="350dp"
        android:height="64dp"
        android:backgroundTint="@color/ungu"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/baru"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_black"
            android:text="@string/signup"
            android:textColor="@color/blue"
            android:textSize="16sp" />

    </LinearLayout>



</LinearLayout>