<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_image"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buat"
        android:fontFamily="@font/roboto_bold"
        android:textSize="28dp"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/regis_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="287dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/nama"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/regis_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="287dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/email"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/regis_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="380dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/pass"
        android:paddingLeft="10dp"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tulisan_register"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="596dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="342dp"
        android:height="64dp"
        android:backgroundTint="@color/ungu"
        android:text="@string/daftar"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="483dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize= "16sp"
            android:text="@string/daftar_text"
            android:fontFamily="@font/roboto_black"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize= "16sp"
            android:text="@string/logIn"
            android:fontFamily="@font/roboto_black"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/blue"/>

    </LinearLayout>
</LinearLayout>