<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_image"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Profil"
        android:fontFamily="@font/roboto_bold"
        android:textSize="28dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/regis_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="287dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/nama"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/regis_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="287dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/email"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/regis_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="380dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/pass"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="342dp"
        android:height="64dp"
        android:backgroundTint="@color/ungu"
        android:text="Simpan"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="483dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"/>

</LinearLayout>